fixed wrong height for loading indicator

--- a/source/kit/stylesheets/custom/loading-indicator.scss
+++ b/source/kit/stylesheets/custom/loading-indicator.scss
@@ -3,7 +3,7 @@
     text-align: center;
 
     i.fa.fa-spin.fa-spinner.content-placeholder-loading {
-        font-size: 200%;
+        font-size: 150%;
         color: $bmg-gray-dark;
     }
 }
